--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 :root {
   --primary: #efb6b2;
   --secondary: #4e4e4e;
@@ -10,7 +17,8 @@
 body {
   font-family: "Noto Serif";
   color: var(--secondary);
-  margin: 0 10rem;
+  margin: 0 3rem;
+  /* border: 2px solid blue; */
 }
 .App {
   max-width: 960px;
@@ -33,10 +41,21 @@ body {
 
 /* upload form styles */
 form {
-  margin: 30px 200px 10px;
+  margin: 2rem 1rem 2rem;
   text-align: center;
   border: 1px solid red;
+  /* position: absolute; */
+  /* top: 50%;
+  left: 50%;
+  transform: translate((-50%, -50%)); */
 }
+
+/* @media screen and (min-width: 768px) {
+  form{
+
+  }
+  
+} */
 
 label input {
   height: 0;
@@ -82,28 +101,84 @@ label:hover {
 
 /* image grid styles */
 .img-grid {
-  margin: 20px auto;
+  /* margin: 2rem 1rem; */
+  /* width: 90vh; */
+  padding: 2rem 0;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  /* grid-gap: 2rem; */
+  gap: 1rem;
+  border: 2px solid blue;
 }
 
-.img-wrap {
+@media screen and (min-width: 768px) {
+  .img-grid {
+    grid-template-columns: 1fr 1fr;
+    /* align-items: start; */
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .img-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+    /* align-items: start; */
+  }
+}
+
+/* .img-wrap {
   overflow: hidden;
   height: 0;
-  padding: 50% 0;
-  /* padding controls height, will always be perfectly square regardless of width */
-  position: relative;
+  padding: 50% 0; */
+/* padding controls height, will always be perfectly square regardless of width */
+/* position: relative;
   opacity: 0.8;
+  border: 1px solid red;
+} */
+
+.img-wrap {
+  /* height: 14rem; */
+  /* width: 2rem; */
+  /* border: 2px solid green; */
+  position: relative;
+  border-radius: 0.25rem;
 }
 
 .img-wrap img {
+  height: 13rem;
+  border: 5px solid red;
+}
+
+img {
+  object-fit: cover;
+  width: 100%;
+  display: block;
+}
+
+/* .img-wrap img {
   min-width: 100%;
   min-height: 100%;
   max-width: 150%;
   position: absolute;
   top: 0;
   left: 0;
-}
+  
+} */
 
 /* modal styles */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.backdrop img {
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 60px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+  border: 3px solid white;
+}
